kortana-blockchain-rust/check_log.txt
cargo :     Checking kortana-blockchain-rust v0.1.0 
(C:\Users\emi\Desktop\blockchains\kortanablockchain-
devhub\kortana-blockchain-rust)
At line:1 char:30
+ cd kortana-blockchain-rust ; cargo check 2>&1 | 
Out-File -Encoding UT ...
+                              ~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (    Ch 
   ecking ko...lockchain-rust):String) [], RemoteE  
  xception
    + FullyQualifiedErrorId : NativeCommandError
 
error[E0252]: the name `Write` is defined multiple 
times
  --> src\core\processor.rs:66:13
   |
25 |         use std::io::Write;
   |             -------------- previous import of 
the trait `Write` here
...
66 |         use std::io::Write;
   |             ^^^^^^^^^^^^^^ `Write` reimported 
here
   |
   = note: `Write` must be defined only once in the 
type namespace of this block

warning: unused import: `VmType`
 --> src\core\processor.rs:4:66
  |
4 | use crate::types::transaction::{Transaction, 
TransactionReceipt, VmType};
  |                                                 
                 ^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of 
`#[warn(unused)]`) on by default

warning: unused import: `std::io::Write`
  --> src\core\processor.rs:66:13
   |
66 |         use std::io::Write;
   |             ^^^^^^^^^^^^^^

warning: unused import: `Sha3_256`
 --> src\types\transaction.rs:4:20
  |
4 | use sha3::{Digest, Sha3_256};
  |                    ^^^^^^^^

warning: value assigned to `is_deployment` is never 
read
   --> src\rpc\mod.rs:102:25
    |
102 |                 let mut is_deployment = false;
    |                         ^^^^^^^^^^^^^
    |
    = help: maybe it is overwritten before being 
read?
    = note: `#[warn(unused_assignments)]` (part of 
`#[warn(unused)]`) on by default

warning: unused variable: `value`
   --> src\rpc\mod.rs:651:50
    |
651 | ...                   let (from, to, value, 
gas_price) = if let Some(t) = &tx {
    |                                      ^^^^^ 
help: if this is intentional, prefix it with an 
underscore: `_value`
    |
    = note: `#[warn(unused_variables)]` (part of 
`#[warn(unused)]`) on by default

warning: unused variable: `value`
   --> src\vm\evm.rs:517:25
    |
517 |                     let value = 
Self::u256_to_u128(self.stack.pop()?);
    |                         ^^^^^
    |
help: if this is intentional, prefix it with an 
underscore
    |
517 |                     let _value = 
Self::u256_to_u128(self.stack.pop()?);
    |                         +
help: you might have meant to pattern match on the 
similarly named constant `MIN_GAS_PRICE`
    |
517 -                     let value = 
Self::u256_to_u128(self.stack.pop()?);
517 +                     let 
parameters::MIN_GAS_PRICE = 
Self::u256_to_u128(self.stack.pop()?);
    |

For more information about this error, try `rustc 
--explain E0252`.
warning: `kortana-blockchain-rust` (lib) generated 
6 warnings
error: could not compile `kortana-blockchain-rust` 
(lib) due to 1 previous error; 6 warnings emitted
